自己申告書

--- a/Other/どうでもいいもの/自己申告書.md
+++ b/Other/どうでもいいもの/自己申告書.md
@@ -11,10 +11,11 @@
 1月から4月は業務をこなしつつの勉強であったが、それを達成できたことになる。
 他、気になる資格の準備も進行中。
 業務においては極端な遅れやトラブルは発生していないので特筆して書くことはない。
-やらなければいけないことは業務・プライベートに関係なく、全て消化し、常に最適化を実践中。
-その一環として一番大きかったのが生活リズムの改善。6時半に起床し、一番頭が働く時間帯に筋トレ、瞑想、勉強をするようにした。
-6時半では遅いほうなので、もっと改善していきたい。まだまだ改善の余地を感じるので、どこまで行けるか楽しみである。
-現状で全く満足していないので、好きなように上を目指していくのみである。
+Todoは業務・プライベート共に全て消化し、常に最適化を実践中。
+その一環として一番大きかったのが生活リズムの改善。
+6時半に起床し、一番頭が働く時間帯に筋トレ、瞑想、勉強をするようにした。
+まだまだ改善の余地を感じるので、どこまで行けるか楽しみである。
+現状においても、全く満足していないので、好きなように上を目指していくのみである。
 
 ■ 資格 :
 日商簿記3級
@@ -34,6 +35,11 @@
 
 自分の立場くらいわかっている。
 そうでもしないとやっていけない状態なのだから、そうするのは当たり前だ。
+
+会社のための目標とか、言葉が明らかに敵意を持っているので、そういうのはやめたほうがいい。
+こういう場では、色々ぶちまけたくなる気持ちもわかるが、切れたら負けだ。
+それに会社なんて考える必要はないだろう。
+今のお前なら、自分のことを考えていれば満足だし、そのほかのことを考える必要なんてないはずだろう。
 ```
 
 ## 今回_上期
@@ -86,10 +92,10 @@ Teelaに集中させていただいたことには感謝しております。気
 
 ``` TXT
 ■ 一次 :
-やりたいことは刻一刻と変化するので6か月先の具体的な目標は決めたくない。
-会社に対する目標ではなく自分に対する目標を達成していきたい。
+やりたいことは刻一刻と変化するので具体的な目標は決めたくない。
+ただ自分に対する目標を達成していきたい。
 そうするだけでも、成長はエスカレートしていくことだろう。
-強いて言えば技術的な不安をどれだけ解消できるかと言ったことだろうか。
+強いて言えば技術的な不安をどれだけ解消できるかと言ったところだろうか。
 
 ■ 資格 :
 ・基本情報技術者試験
