--- a/SQL/基本.md
+++ b/SQL/基本.md
@@ -21,9 +21,13 @@ INSERT INTO テーブル名 SELECT 項目名 FROM テーブル名
 INSERT INTO syain1 ( id, name ) SELECT id, name FROM syain2
 ```
 
-<https://qiita.com/ryota_i/items/d17c7630bacb36d26864>
+<https://qiita.com/ryota_i/items/d17c7630bacb36d26864>  
 
-●UPDATE文
+---
+
+## UPDATE文
+
+### 基本a
 
 ```sql
 UPDATE テーブル名
@@ -31,58 +35,84 @@ SET 列名1 = 値1 [,列名2 = 値2]・・・
 WHERE (条件);
 ```
 
-●UPDATE文のset句で副問合せを使用する
+### UPDATE文のset句で副問合せを使用する
+
+UPDATE SET FROM JOIN WHERE の流れを意識すれば、まぁ何とか鳴るでしょう。  
 
 ```sql
 UPDATE syain
 SET name = (
-    select name from test
+    select name
+    from test
     where id = 2)
 WHERE id = 2;
 ```
 
-●UPDATE文のwhere句で副問合せを使用する
+### UPDATE文のwhere句で副問合せを使用する
+
+<https://sqlazure.jp/r/sql-server/403/>
 
 ```sql
+-- where in
 UPDATE syain
 SET name = 'テスト'
 WHERE id in (
     select id from test
-    where name = 'TEST');
+    where name = 'TEST'
+);
+
+-- inner join 1
+UPDATE
+    [Table]
+SET
+    [Table].col1 = [other_table].col1,
+    [Table].col2 = [other_table].col2
+FROM
+    [Table]
+    INNER JOIN
+        [other_table]
+    ON
+        [Table].id = [other_table].id
+
+-- inner join 2
+UPDATE
+    テーブル名1 
+    INNER JOIN テーブル名2 
+    ON テーブル名1.列名X = テーブル名2.列名X
+SET
+    テーブル名1.列名1 = テーブル名2.列名2;
+
+-- 下記でも同じ
+UPDATE
+    テーブル名1,テーブル名2
+SET
+    テーブル名1.列名1 = テーブル名2.列名2
+WHERE
+    テーブル名1.列名X = テーブル名2.列名X;
 ```
 
-●UPDATE文でCASE式を使用する
+### UPDATE文でCASE式を使用する
 
 ```sql
-UPDATE syain
-SET 
- name = case id
-    when 1 then '鈴木一郎'
-    when 2 then '田中二郎'
-    when 3 then '佐藤三郎'
-    end
- ,romaji = case
-    when id > 1 then 'tokumei' 
-    ELSE 'i.suzuki'
-    end
-WHERE id in (1,2,3);
-
 UPDATE
-テーブル名1 INNER JOIN テーブル名2 ON テーブル名1.列名X = テーブル名2.列名X
+    syain
 SET
-テーブル名1.列名1 = テーブル名2.列名2;
-
-下記でも同じ
-
-UPDATE
-テーブル名1,テーブル名2
-SET
-テーブル名1.列名1 = テーブル名2.列名2
+    name = case id
+        when 1 then '鈴木一郎'
+        when 2 then '田中二郎'
+        when 3 then '佐藤三郎'
+    end,
+    romaji = case
+        when id > 1 then 'tokumei'
+        ELSE 'i.suzuki'
+    end
 WHERE
-テーブル名1.列名X = テーブル名2.列名X;
+    id in(1, 2, 3)
 ```
 
-●DELETE文
+---
+
+## DELETE文
 
 ```sql
 DELETE FROM テーブル名 WHERE (条件);
