--- a/SQL/基本.md
+++ b/SQL/基本.md
@@ -1,59 +1,47 @@
 # 基本
 
+## INSERT
+
 <https://itsakura.com/sql-insert>  
 
-●INSERT文 (列名を書かない)  
-
 ``` sql
+-- ●INSERT文 (列名を書かない)  
 INSERT INTO テーブル名 VALUES ( ‘値1′ [ , ‘値2’ ]・・・);
-```
 
-●INSERT文 (列名を書く)
 
-```sql
+-- ●INSERT文 (列名を書く)
 INSERT INTO テーブル名 ( テーブルの列名1 [ , テーブルの列名2 ]・・・) VALUES ( ‘値1′ [ , ‘値2’ ]・・・);
-```
 
-●INSERT文 (select文の結果をinsertする)
 
-```sql
+-- ●INSERT文 (select文の結果をinsertする)
 INSERT INTO テーブル名 SELECT 項目名 FROM テーブル名
 INSERT INTO syain1 ( id, name ) SELECT id, name FROM syain2
 ```
 
-<https://qiita.com/ryota_i/items/d17c7630bacb36d26864>  
-
 ---
 
-## UPDATE文
+## UPDATE
 
-### 基本a
+<https://qiita.com/ryota_i/items/d17c7630bacb36d26864>  
 
 ```sql
+-- ●基本
 UPDATE テーブル名
 SET 列名1 = 値1 [,列名2 = 値2]・・・
 WHERE (条件);
-```
 
-### UPDATE文のset句で副問合せを使用する
 
-UPDATE SET FROM JOIN WHERE の流れを意識すれば、まぁ何とか鳴るでしょう。  
-
-```sql
+-- ●UPDATE文のset句で副問合せを使用する
 UPDATE syain
 SET name = (
     select name
     from test
     where id = 2)
 WHERE id = 2;
-```
 
-### UPDATE文のwhere句で副問合せを使用する
 
-<https://sqlazure.jp/r/sql-server/403/>
-
-```sql
--- where in
+-- ●UPDATE文のwhere句で副問合せを使用する(where in)
+-- https://sqlazure.jp/r/sql-server/403/
 UPDATE syain
 SET name = 'テスト'
 WHERE id in (
@@ -61,7 +49,8 @@ WHERE id in (
     where name = 'TEST'
 );
 
--- inner join 1
+-- ●inner join 1
+-- UPDATE SET FROM JOIN WHERE の流れを意識すれば、まぁ何とか鳴るでしょう。  
 UPDATE
     [Table]
 SET
@@ -74,14 +63,14 @@ FROM
     ON
         [Table].id = [other_table].id
 
--- inner join 2
+
+-- ●inner join 2
 UPDATE
     テーブル名1 
     INNER JOIN テーブル名2 
     ON テーブル名1.列名X = テーブル名2.列名X
 SET
     テーブル名1.列名1 = テーブル名2.列名2;
-
 -- 下記でも同じ
 UPDATE
     テーブル名1,テーブル名2
@@ -89,11 +78,9 @@ SET
     テーブル名1.列名1 = テーブル名2.列名2
 WHERE
     テーブル名1.列名X = テーブル名2.列名X;
-```
 
-### UPDATE文でCASE式を使用する
 
-```sql
+-- ●UPDATE文でCASE式を使用する
 UPDATE
     syain
 SET
@@ -115,10 +102,38 @@ WHERE
 ## DELETE文
 
 ```sql
+-- ●基本
 DELETE FROM テーブル名 WHERE (条件);
+
+
+-- ●join
+-- https://stackoverflow.com/questions/16481379/how-can-i-delete-using-inner-join-with-sql-server
+-- DELETE FROM JOIN WHEREの流れは基本的に同じ見たい。それさえ分かれば後は十分だろう。
+-- joinの場合、削除するテーブルを指定する必要があるので、DELETEの後ろにエイリアスを指定する(テーブル名ではダメ見たい)。
+DELETE w
+FROM WorkRecord2 w
+INNER JOIN Employee e
+ON EmployeeRun=EmployeeNo
+WHERE Company = '1' AND Date = '2013-05-06'
+
+
+-- ●複数テーブルの削除
+-- https://hamalabo.net/mysql-multi-delete
+-- 通常の場合
+DELETE FROM M_UserData WHERE UserId = 1;
+DELETE FROM T_TimeCard WHERE UserId = 1;
+
+-- 複数テーブルの場合
+DELETE User,Time
+FROM M_UserData As User
+LEFT JOIN T_TimeCard AS Time
+ON User.UserId = Time.UserId
+WHERE User.UserId = 1
 ```
 
-●Truncate
+---
+
+## Truncate
 
 ```sql
 Truncate table テーブル名;
