--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -1,4 +1,6 @@
-# Task
+# 非同期系メモ
+
+## Task
 
 TaskクラスはStaticなので宣言する必要はなく、Runさせたい時はTask.Run()でよろしい。  
 New Task().Run()はできない。  
@@ -85,3 +87,69 @@ class Program
     }
 }
 ```
+
+---
+
+## Taskのラムダ式の定義の仕方
+
+async/await を使った非同期ラムダ式を変数に代入する方法とも言うか。  
+<https://qiita.com/go_astrayer/items/352c34b8db72cf2f6ca5>  
+いつもの癖でAction型に入れようとして少し苦戦したので備忘録として残すことにした。  
+
+``` C#
+    Func<Task> AsyncFunc = async () =>
+    {
+        await Task.Delay(1);
+    };
+```
+
+---
+
+## async voidのラムダ式
+
+<https://stackoverflow.com/questions/61827597/async-void-lambda-expressions>  
+
+async void ○○ await △△ みたいな非同期処理を1行で書けないか探したが、全然そんなこと書いてるところがない。  
+「async void lambda c#」で調べてようやくそれっぽいところにたどり着いたが、本当にあってるのかはわからない。  
+
+``` C#
+    private async void Hoge()
+    {
+        await Task.Delay(1000);
+    }
+    private void Main()
+    {
+        // async void HogeはTask.Runのように書いても動くけど、厳密には少し違うみたい。
+        Hoge();
+        // これは正確にはWait1000みたいな意味合いらしい。
+        Task.Run(async () => await Task.Delay(1000));
+    }
+    private async Task Wait1000() {
+        await Task.Delay(1000);
+    }
+    Task.Run(Wait1000);
+```
+
+---
+
+## Dispatcher
+
+<https://hilapon.hatenadiary.org/entry/20130225/1361779314>  
+<https://araramistudio.jimdo.com/2017/05/02/c-%E3%81%A7%E5%88%A5%E3%82%B9%E3%83%AC%E3%83%83%E3%83%89%E3%81%8B%E3%82%89%E3%82%B3%E3%83%B3%E3%83%88%E3%83%AD%E3%83%BC%E3%83%AB%E3%82%92%E6%93%8D%E4%BD%9C%E3%81%99%E3%82%8B/>  
+<https://www.it-swarm-ja.com/ja/c%23/dispatcherinvoke%E3%82%92%E4%BD%BF%E7%94%A8%E3%81%97%E3%81%A6%E9%9D%9E%E3%83%A1%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%AC%E3%83%83%E3%83%89%E3%81%8B%E3%82%89wpf%E3%82%B3%E3%83%B3%E3%83%88%E3%83%AD%E3%83%BC%E3%83%AB%E3%82%92%E5%A4%89%E6%9B%B4%E3%81%99%E3%82%8B/968851135/>  
+
+`Application.Current.Dispatcher.Invoke(() =>`謎の呪文。後で調べたい。  
+→  
+どうやら、並列処理における概念らしい。  
+async,awaitなどでスレッドを分けた場合、他のスレッドで動作しているコントロールをいじれなくなってしまう。  
+でも、場合によってはそのコントロールを操作したい時があるわけで、  
+そういう場合に、そのコントロールを操作する仕組みがDispatcherっぽい。  
+Dispatcherはキューを管理するクラス。  
+操作したいコントロールを所有しているスレッドのキュー管理に対して、指定したデリゲートの実行をお願いするイメージ。  
+→
+とりあえず、並列処理とかasync,awaitとかの時に使えばいいみたいね。  
+
+<https://redwarrior.hateblo.jp/entry/2021/03/29/090000>  
+この記事も面白い。  
+
+---
