2週目と暗記中

--- a/LPIC/101/3.GNUとUnixのコマンド.md
+++ b/LPIC/101/3.GNUとUnixのコマンド.md
@@ -67,6 +67,13 @@ set
 
 ## コマンドラインでの作業 2
 
+manコマンド
+-a 全てのセクションのマニュアルを表示する
+-f 完全一致(whatis)
+-k 部分一致(apropos)
+-w マニュアルの置かれているディレクトリを表示
+
+
  bashシェルで実行したコマンドの履歴を保存するファイルは?
   （ファイル名のみ）
 .bash_history
@@ -484,12 +491,12 @@ xzcatコマンド
 tarコマンド
 -c アーカイブの作成
 -x アーカイブの展開
--t アーカイブの内容を一覧表示
+**-t アーカイブの内容を一覧表示**
 -f ファイル名 アーカイブファイル名の指定
 -z gzipによる圧縮と展開
 -j bzip2による圧縮と展開
 -J xzによる圧縮と展開
--v 詳細表示
+**-v 詳細表示**
 ↓存在感がない
 -u アーカイブ内にある同名のファイルより新しいものだけを追加する(?)
 -r アーカイブにファイルを追加
@@ -938,11 +945,11 @@ nice --20 test
 ## 正規表現を使用してのテキストファイル検索
 
 grepコマンド
--c
--f
--i
--n
--v
+-c パターンにマッチした行数のみ表示
+-f ファイルから読み込む
+-i 大文字と小文字を区別しない
+-n 行番号も表示
+-v マッチしない行を表示
 -E 拡張正規表現
 
 sedコマンド
@@ -998,6 +1005,8 @@ sed s/ping/hoge text
   「.sh」に置換したい。適切なコマンドは？
   （省略できるオプションは省略すること。また、正規表現は「'」で囲うこと）
 sed 's/\.exe$/\.sh/g' text
+→
+sとgまでシングルで囲う。この基準がわからない。
 
 
   sedコマンドを使用して「text」ファイルの内容を編集して表示する際、
@@ -1096,6 +1105,7 @@ ZZ
 :xq
 言いたいことはわかるけど、微妙に違った。
 zzは大文字であることに注意。
+xはコロンを必要とすることに注意。
 
 ---
 
@@ -1182,3 +1192,421 @@ yyp
 :%s/ping/hoge/g
 →頭のコロンを忘れずに。
 
+--
+
+## 2週目に間違った問題
+
+  プロセスのnice値を表示できるコマンドは？
+  (アルファベット順に2つ。オプション指定が必要な方はハイフン無しで)
+ls l
+top
+→
+ps l
+top
+→
+psもlsもlは詳細情報。
+
+
+ gzip形式で圧縮したアーカイブファイル「dir.tar.gz」をカレントディレクトリに展開したい。
+  適切なコマンドは？
+  (オプションは、「-」を省略しアルファベット順にまとめて指定)
+tar xz dir.tar.gz
+→
+tar fxz dir.tar.gz
+→
+なぜかfを入れなかった。
+
+
+viエディタのコマンドモードで、カーソルをファイルの先頭へ移動することが出来るviコマンドは？
+H
+→
+gg
+→
+ファイルの先頭という文言を見落とした。
+Hは画面の先頭。
+
+
+  viエディタで編集しているファイルを、変更内容を保存しエディタを終了したい。
+  適切なviコマンドは？(記号を使用するほうから先に、またアルファベット順に3つ)
+:wq
+ZZ
+x
+→
+:wq
+:x
+ZZ
+→
+xはコロンが必須であることを忘れていた。
+
+
+ viエディタのコマンドモードにおいて、カーソルのある行をコピーし、
+  下の行に挿入したい。適切なviコマンドは？（3文字で）
+3YP
+→
+yyp
+→
+回答を早とちりした。直近でやった3行コピーして上にペースとと思いこんだ。
+3YPとかyyPから察するに、一連のコマンドは連続して入力することでちゃんと反映されるのだろう。
+
+
+  「file」ファイルの各行の2番目の文字を取り出して表示したい。
+  適切なコマンドは?
+cut -c 2
+→
+cut -c 2 file
+→
+ファイル指定を忘れただけ。でも、cut -cは割と怪しいのでここで完璧にしておく。
+-cは何番目の文字を取り出すのかを指定するオプション。
+文字とあるからcharと連想して覚えればいいかな。
+気を付けるのは、フィールドと勘違いしてしまいそうなことかな。
+フィールドの指定はそのままfで問題ない。
+
+
+ フォアグラウンドで実行しているプロセスに割り込みシグナルを送信し、プロセスを終了したい。
+  どのキーを押下する必要があるか？
+Ctrl+z
+→
+Ctrl+C
+→
+プロセスの一時停止と割り込み終了を覚えられていなかった。
+Cは終了だ。
+
+
+  「ping local > log」コマンドをログアウト後もバックグラウンド
+  で実行し続けたい。適切なコマンドは？
+nohug ping local > log
+→
+nogup ping local > log &
+→
+最後の&を付け忘れた。これがないと、バッググラウンドの指定がされない。
+あとhungupをhugと間違えてしまった。
+
+
+  「file.bz2」ファイルを展開するコマンドは？
+  (アルファベット順に2つ)
+bunzip2 gile.bz2
+bzip2 -d file.bz2
+→
+bunzip2 file.bz2
+bzip2 -d file.bz2
+→
+わざわざ取り上げる必要もないと思うが、念のため。
+本番では、単語の打ち間違いは絶対に確認しましょう。
+まぁ、90分を使い切る事はないと思うので、確認の時間は山ほどあると思いますが。
+
+
+  grepコマンドで、検索パターンにマッチした行の行数のみを表示させたい。
+  適切なオプションは？
+-n
+→
+-c
+→
+行数表示のオプションが覚えられない。
+パターンにマッチした行数のみ表示が-cで、行番号も表示が-n。
+いい線は言っているが、もう一つだった。
+
+行数表示
+grep -c パターンマッチした行数のみ表示
+grep -n 行番号の表示
+wc -l 指定したファイルの行数表示
+cat -n 左端に行番号付加
+nl 行数を付けてファイルを表示
+
+
+ファイルの種別を表示するコマンドは？
+type
+→
+file
+→
+typeコマンドはファイルシステム出てくるコマンド。
+指定したコマンドが通常の実行ファイルなのか、シェルの組み込みコマンドなのか、エイリアスなのかを表示するコマンド。
+種別って部分でtypeも一緒に浮かんできた。ファイルの種別なら安直にfileでよろしい。
+
+
+  「killall mycom」コマンドと同等のコマンドを、シグナルを指定して実行したい。
+  以下の下線部を埋めなさい。但し、-sオプションは使用しない事。
+  （短い順に3つ。シグナル名の場合は大文字で）
+  killall _____ mycom
+-15
+-TERM
+SIGTERM
+→
+-15
+-TERM
+-SIGTERM
+→
+SIGまで指定したらTERMだけでいいって思ってたけど、改めて参考書見たら全部頭にハイフンついてた。
+気を付けたい。
+
+
+  viエディタのコマンドモードで、カーソルを行末へ移動することが出来るviコマンドは？
+A
+→
+$
+→
+行末から入力開始ならAだけど、移動するだけなら$だ。0$puserで覚えたでしょ。
+
+
+ sambaというキーワードを一部に含むmanページを検索するコマンドは?
+  (アルファベット順に2つ)
+whereis samba
+which samba
+→
+apropos samba
+man -k samba
+→
+この問題よく間違える。
+man -f 、wahtisの組み合わせは覚えたけど、こっちは覚えられない。
+-k
+
+
+  「dir1」ディレクトリを、配下にあるファイルやディレクトリも含めて削除するコマンドは？
+  なお、「dir1」ディレクトリは空ではない。
+rm -r dir
+→
+rm -r dir1
+→
+ポカミスがやばすぎる。
+配下にある物を全て消すので、再帰的を意味する-rオプションの指定はよかった。
+dir1は空ではないので、rmdirコマンドは使えない。
+
+
+  「dir.tar」というアーカイブの内容を表示できるコマンドは？
+  なお、アーカイブは展開せず、詳細情報を表示すること。
+  (オプションは、「-」を省略しアルファベット順にまとめて指定)
+tar fv dir.tar
+→
+tar ftv dir.tar
+→
+tarコマンドでの間違いはオプションが1つ抜けていることが多い。
+vは詳細表示。
+tは一覧表示。
+一覧と詳細が他のコマンドとかぶることが多い。
+とりあえず、tarではそうだと覚えるしかないか・・・。
+lは存在しないことに注意。
+
+
+  sedコマンドを使用して、「text」ファイル内の全ての「a」を「A」に、
+  また「b」を「B」に置換したい。適切なコマンドは？
+  (オプションは使用せず、編集コマンドは上記の順に指定)
+sed y/ab/AB text
+→
+sed y/ab/AB/ text
+→
+yであっても、最後はスラッシュで締める事を忘れずに。
+
+
+ ファイルの変更内容を保存せずにviエディタを終了したい。適切なviコマンドは？
+:q
+→
+:q!
+→
+何も指定がないから強制終了のあれ。
+
+
+  trコマンドを使用して「file」ファイル内の英小文字を英大文字に変換して表示させたい。
+  適切なコマンドは?
+  (リダイレクトを使用し、文字クラスは使用しない事)
+tr 's/[a-z]/[A-Z]/g' < file
+→
+tr a-z A-Z < file
+→
+sedコマンドと勘違いした。
+シングルコーテーションで囲めばいいのかどうかも迷うことがある。
+基本いらないって事でいいのか？
+付けるとしたらその条件は何だ？
+
+
+ psコマンドのオプションのうち、プロセスの実行ユーザ名も表示するオプションは？
+-u
+→
+u
+→
+ハイフン無し。psコマンドはハイフンありと混ざっていたような気がする。
+あー、あれだ。ps aufxを基準に考えてこれ以外はハイフンありって覚えればいいか。
+a 全てのユーザーのプロセス表示
+f 親子関係をツリー状に表示
+u ユーザー名も表示
+x デーモンも表示
+-e 全てのプロセスを表示
+-l 詳細情報
+-p PID 指定したpidのプロセス情報のみ表示
+-C プロセス名 指定したプロセス名のプロセスのみ表示
+-w 長い行は折り返して表示
+
+psは-lが詳細表示。確か、tarが-vで詳細表示なので、こいつらが見事にわかれている元凶ってことか。
+lsもlか。でも逆に言えばこいつらくらいじゃないか？
+
+
+  catとtrコマンドを使用して、「file」ファイル内の英小文字を英大文字に変換して表示させたい。
+  適切なコマンドは?
+  (パイプおよび文字クラスを使用する事。リダイレクト演算子は使用しない)
+cat file | tr s/[:lower:]/[:upper:]
+→
+cat file | tr [:lower:] [:upper:]
+
+
+  あるコマンドを入力すると「file」ファイルのinode番号などの詳細情報が
+  出力された。
+  空欄に入るコマンドは?
+file
+→
+stat
+→
+file,type,stat。
+状態を確認するコマンドはたくさんある。
+
+
+  lsコマンドのオプションのうち、ファイルタイプをつけて表示するオプションは？
+-l
+→
+-F
+→
+こいつも毎回覚えられない。
+ファイルの種類。ファイルタイプ。FileType。2単語で表現するから大文字でいいか。
+
+
+ 「dir」ディレクトリ内の全てのファイルをそれぞれgzip形式で圧縮したい。適切なコマンドは？
+gzip dir
+→
+gzip -r dir
+→
+再帰的だから普通に-rでよかったか。
+逆に圧縮コマンドで再帰的なオプションがあるのはこいつしかない。
+
+
+ 「file1」と「file2」ファイルを行単位で区切り文字「:」を使用して結合したい。
+  適切なコマンドは?
+cat -d : file1 file2
+→
+paste -d : file1 file2
+
+
+  フォアグラウンドで実行中のジョブを一時停止したい。
+  どのキーを押下する必要があるか？
+Ctrl+C
+→
+Ctrl+Z
+
+
+  「file」ファイルを行番号をつけて出力したい。適切なコマンドは?
+  なお、行番号は空行を含めた全ての行に付けることとする。
+  (アルファベット順に2つ)
+cat -c file
+nl -b a file
+→
+cat -n file
+nl -b a file
+
+
+  trコマンドを使用して、「file」ファイルにある「PING」を「ping」に変換し
+  既存の「hoge」ファイルに追記したい。適切なコマンドは？
+  (パイプを使用せずにリダイレクト演算子のみを使用すること)
+tr -s PING ping < file >> hoge
+→
+tr PING ping < file >> hoge
+
+
+ trコマンドを使用して、「file」ファイルにある「PING」を「ping」に変換し
+  既存の「hoge」ファイルに上書きしたい。適切なコマンドは？
+  (パイプを使用せずにリダイレクト演算子のみを使用すること)
+tr PING ping file >> hoge
+→
+tr PING ping < file > hoge
+
+
+egrepコマンドを使用して「text」ファイルから、「ping」または
+  「hoge」という文字列を含まない行を抽出したい。適切なコマンドは？
+  (正規表現は「'」で囲い、「ping」から指定する事)
+egrep -v 'ping|hoge'
+→
+egrep -v 'ping|hoge' text
+
+
+  viエディタでコマンドモードから入力モードに移行する際、
+  カーソルの右から文字を入力したい。適切なviコマンドは？
+i
+→
+a
+
+
+ viエディタでコマンドモードから入力モードに移行する際、
+  カーソルのある行の末尾から文字を入力したい。適切なviコマンドは？
+I
+→
+A
+
+
+  任意の1文字を表すメタキャラクタは?
+.
+→
+?
+
+
+  lsコマンドのオプションのうち、詳細情報を表示するオプションは？
+-v
+→
+-l
+
+
+  grepコマンドで、検索パターンにマッチした行を表示する際、
+  行頭に行番号を付けて表示させたい。適切なオプションは？
+-c
+→
+-n
+
+
+  trコマンドを使用して、「file1」ファイル内の連続した「#」を1つに置き換えて
+  「file2」ファイルに出力したい。適切なコマンドは？
+  （パイプを使用せずにリダイレクト演算子のみを使用すること）
+tr -s '#' file1 > file2
+→
+tr -s '#' < file1 > file2
+→
+
+
+
+lsコマンドのオプションのうち、サブディレクトリの内容も再帰的に表示するオプションは？
+-r
+→
+-R
+
+
+  gzip形式で圧縮したアーカイブファイル「test.tar.gz」の内容を展開せずに表示したい。
+  下線部にあてはまる適切なgzipコマンドは？
+  (オプションはアルファベット順にまとめて指定)
+  __________ test.tar.gz | tar ftv -
+tar fz
+→
+gzip -cd
+
+
+ 標準入力元をキーボードからファイルに切り替えることが出来るリダイレクト演算子は？
+\>
+→
+<
+
+
+ viエディタのコマンドモードで、カーソルを行頭へ移動することが出来るviコマンドは？
+I
+→
+0
+
+
+正規表現で、行末を意味する記号は？
+&
+→
+$
+
+
+  psコマンドで動作中の全てのプロセスの親子関係をツリー状で表示したい。
+  適切なコマンドは？(オプションはアルファベット順に指定)
+ps af
+→
+ps afx
+
+
+ 正規表現で、[ ]内の先頭において後続の文字以外を意味する記号は？
+!
+→
+^
