--- a/LPIC/101/ディレクトリ・設定ファイル集.md
+++ b/LPIC/101/ディレクトリ・設定ファイル集.md
@@ -6,20 +6,30 @@ confとcfgの違いは命名者の好みだって。
 
 
 udevがデバイスファイル作成時に使用する設定ファイルが
-  配置されるディレクトリは?（フルパスで）
-/etc/udev/rules.d
+配置されるディレクトリは?（フルパスで）
+/etc/udev/rules.d/
 
 modprobeの設定ファイルが保存されるディレクトリは?
 /etc/modprobe.d/
-
-updatedbコマンドの設定ファイルは？
-/etc/updatedb.conf
 
 pciデバイスの格納ファイル
 /proc/bus/pci/devices
 
 usbデバイスの格納ファイル
 /proc/bus/usb/devices
+
+デフォルトのランレベルを設定できるファイルは?
+(SysVinit採用システムの場合)
+/etc/inittab
+
+ システム起動時にブートローダからカーネルに渡されたパラメータが格納されたファイルは?
+/proc/cmdline
+
+systemdの動作するシステムで、システム起動時に最初に実行されるUnitファイルは？
+/etc/systemd/system/default.target
+
+ SysVinit採用システムで、ランレベル3で実行されるスクリプトが入っているディレクトリは?
+/etc/rc3.d
 
  GRUB2の設定ファイルは?
 /boot/grub/grub.cfg
@@ -33,6 +43,9 @@ usbデバイスの格納ファイル
 /etc/default/grub
 /etc/grub.d
 
+updatedbコマンドの設定ファイルは？
+/etc/updatedb.conf
+
 プログラムの実行時に、共有ライブラリの場所を検索するために使用されるファイルは?
 /etc/ld.so.cache
 
@@ -41,24 +54,29 @@ ldconfigコマンドを使用して共有ライブラリのキャッシュファ
 どのファイルに新しいディレクトリのパスを記述する必要があるか?
 /etc/ld.so.conf
 
-  APTツールではネットワーク経由で最新のパッケージを取得できるが
-  パッケージの取得元(リポジトリ)を設定するファイルは?
+APTツールではネットワーク経由で最新のパッケージを取得できるが
+パッケージの取得元(リポジトリ)を設定するファイルは?
 /etc/apt/sources.list
 
  dpkgツールの設定ファイルは?
-/etc/dpkg/.dpkg.cfg
+/etc/dpkg/dpkg.cfg
 
  YUMツールの設定ファイルは?
 /etc/yum.conf
 
-  YUMツールではネットワーク経由で最新のパッケージを取得できる。
-  パッケージの取得元(リポジトリ)を設定するファイルが格納されているディレクトリは?
+YUMツールではネットワーク経由で最新のパッケージを取得できる。
+パッケージの取得元(リポジトリ)を設定するファイルが格納されているディレクトリは?
 /etc/yum.repos.d
-
 
 ---
 
 ## ディレクトリ
+
+ systemdのデフォルトのターゲットが格納されているディレクトリは？
+/etc/systemd/system
+
+ modprobeの設定ファイルが保存されるディレクトリは?
+/etc/modprobe.d/
 
 マニュアルページが格納されているディレクトリは？
 /usr/share/man/
@@ -73,3 +91,18 @@ ldconfigコマンドを使用して共有ライブラリのキャッシュファ
 
 デフォルトで起動するエディタを設定する環境変数は？
 EDITOR
+
+bashで実行したコマンドの実行履歴が保存されるファイル
+.bash_history
+→
+ログインした直後のホームディレクトリにある隠しファイル。
+
+
+詳細
+→
+
+依存
+→
+
+アンインストール
+→
