--- a/LPIC/101/2.Linuxのインストールとパッケージ管理.md
+++ b/LPIC/101/2.Linuxのインストールとパッケージ管理.md
@@ -442,3 +442,521 @@ IaaS
 PaaS
 SaaS
 cloud-init
+
+---
+
+## 2週目に間違った問題
+
+GRUB2の設定ファイルは?
+/etc/grub/grub.cfg
+
+/boot/grub/grub.cfg
+
+
+プログラムの実行時に、共有ライブラリの場所を検索するために使用されるファイルは?
+LD_LIBLARY_PATH
+
+/etc/ld.so.cache
+
+
+
+  yumコマンドのサブコマンドのうち、
+  パッケージの詳細な情報を表示するサブコマンドは?
+list
+
+info
+
+
+
+  rpmコマンドのオプションのうち、
+  パッケージをアップグレード(なければインストール)するオプションは?
+  （短い方から先に2つ）
+-U
+--update
+
+--upgrade
+
+
+
+  zypperコマンドのサブコマンドのうち、
+  アップデート可能なパッケージを表示するサブコマンドは?
+  （短い方から先に2つ）
+up
+list-updates
+
+lu
+
+
+  rpmコマンドの併用オプションのうち、
+  設定ファイルを一覧表示するオプションは?
+  （短い方から先に2つ）
+-c
+--configfile
+
+--configfiles
+
+
+ GRUB Legacyの設定ファイル「/boot/grub/menu.lst」において、ルートパーティションを
+  2番目のディスクの3番目のパーティションに指定したい。どのように指定すれば良いか?
+(hd1,2)
+
+root (hd1,2)
+
+
+  apt-getコマンドを使用して、「apache2」パッケージをアンインストールしたい。
+  適切なコマンドは?
+apt-get erase apache2
+
+apt-get remove apache2
+
+
+  GRUB2の設定を直接編集できるファイルは?
+  （フルパスでファイル名、ディレクトリ名の順に2つ）
+/boot/grub/default
+/boot/grub.d
+
+/etc/default/grub
+/etc/grub.d/
+
+
+  apt-getコマンドのサブコマンドのうち、
+  過去に取得したパッケージファイルを削除するサブコマンドは?
+clear
+clean
+
+
+ rpmコマンドの併用オプションのうち、
+  指定したパッケージの詳細を表示するオプションは?
+  （短い方から先に2つ）
+-L
+--listfiles
+
+-i
+--info
+
+
+  apt-getコマンドのサブコマンドのうち、
+  ディストリビューションを最新版にするサブコマンドは?
+update
+
+dist-upgrade
+
+
+ ブートローダであるGRUB2の設定ファイルの内容を変更したい。変更内容を反映させるコマンドは?
+grub-reconfigure
+
+grub-mkconfig
+
+
+  rpmコマンドを使用して、インストール前に「postfix-1.i386.rpm」ファイルから
+  インストールされるファイルを調べたい。適切なコマンドは?
+  (オプションを先に指定し、併用オプションはアルファベット順でまとめて指定。また、それらは省略した形を使用)
+rpm -Lpq postfix-1.i386.rpm
+
+rpm -qlp postfix-1.i386.rpm
+
+
+  共有ライブラリを格納するためのディレクトリを新たに作成した。
+  ldconfigコマンドを使用して共有ライブラリのキャッシュファイルを更新するためには、
+  どのファイルに新しいディレクトリのパスを記述する必要があるか?
+LD_LIBLARY_PATH
+
+/etc/ld.so.conf
+
+
+
+  apt-cacheコマンドのサブコマンドのうち、
+  指定したパッケージが依存しているパッケージの名前を一覧表示するサブコマンドは?
+depens
+depends
+
+
+ rpmコマンドのオプションのうち、
+  パッケージをアンインストールするオプションは?
+  （短い方から先に2つ）
+-r
+--remove
+
+-e
+--erase
+
+
+  GRUB Legacyの設定ファイル「/boot/grub/menu.lst」において、ルートパーティションを
+  1番目のディスクの4番目のパーティションに指定したい。どのように指定すれば良いか?
+root=(hd0,3)
+
+root (hd0,3)
+
+
+  yumコマンドを使用して、アップデート可能な全てのパッケージをアップデートしたい。
+  適切なコマンドは?
+update
+yum update
+
+
+GRUB Legacyの設定ファイルは?(アルファベット順に2つ)
+/boot/grub.conf
+/boot/grub/menu.lst
+
+/boot/grub/grub.conf
+/boot/grub/menu.lst
+
+
+ パッケージ情報の検索・参照などは行えないが、パッケージ情報のデータベースを使って
+  依存関係を調整しながらパッケージのインストール・アンインストールなどを行える
+  Debianパッケージの管理用コマンドは?
+dpkg
+
+apt-get
+
+
+  yumコマンドのサブコマンドのうち、
+  パッケージをアンインストールするサブコマンドは?
+erase
+
+remove
+
+
+  rpmコマンドを使用して、依存関係を無視して「postfix」パッケージを
+  強制的にアンインストールしたい。適切なコマンドは?
+  (オプション、併用オプションの順で指定。また、オプションは省略した形を使用)
+rpm -r --nodeps postfix
+
+rpm -e --nodeps postfix
+
+
+  apt-getコマンドを使用して、ディストリビューションを最新版にしたい。
+  適切なコマンドは?
+dist-upgrade
+apt-get dist-upgrade
+
+
+ rpmコマンドのオプションのうち、
+  指定したパッケージが依存するファイルを表示するオプションは?
+  （短い方から先に2つ）
+-d
+--depends
+
+-R
+--requires
+
+
+  dpkgコマンドのアクションのうち、
+  指定したインストール済みパッケージの詳細情報を表示するアクションは?
+  （短い方から先に2つ）
+-L
+--list-updates
+
+-s
+--status
+
+
+  zypperコマンドのサブコマンドのうち、
+  パッケージの詳細情報を表示するサブコマンドは?
+show
+
+info
+
+
+  rpmコマンドを使用して、インストールされている「postfix」パッケージの
+  詳細情報を調べたい。適切なコマンドは?
+  (オプション、併用オプションの順でまとめて指定。また、それらは省略した形を使用)
+rpm -qi postfix
+
+
+ rpmコマンドの併用オプションのうち、
+  インストール済みの全パッケージを表示するオプションは?
+  （短い方から先に2つ）
+-l
+--list
+
+-a
+--all
+
+
+systemdの動作するシステムで、実験的にグラフィカルログインモードで起動したい。
+  起動プロンプトで指定すべきカーネルパラメータを答えよ（省略不可）
+set graphical.target
+
+systemd.unit=graphical.target
+
+
+
+  YUMツールの設定ファイルは?
+/etc/yum.cnf
+
+/etc/yum.conf
+
+
+  dpkgコマンドを使用して、インストール済みのパッケージを一覧表示させたい。
+  適切なコマンドは?
+  （アクションが短い方から先に2つ）
+-l
+--list
+
+dpkg -l
+dpkg --list
+
+
+  zypperコマンドのサブコマンドのうち、
+  リポジトリの一覧を表示するサブコマンドは?
+  （短い方から先に2つ）
+rl
+repos
+
+lr
+repos
+
+
+ dpkgコマンドのアクションのうち、
+  指定したパッケージからインストールされたファイルを一覧表示するアクションは?
+  （短い方から先に2つ）
+-L
+-listfiles
+
+--listfiles
+
+
+ rpmコマンドのオプションのうち、
+  パッケージの検査を行うオプションは?
+  （短い方から先に2つ）
+-c
+--check
+
+-V
+--verify
+
+
+  rpmコマンドの併用オプションのうち、
+  指定したパッケージの変更履歴を表示するオプションは?
+--change-log
+
+--changelog
+
+
+  rpmコマンドの併用オプションのうち、
+  指定したパッケージに含まれるファイルを表示するオプションは?
+  （短い方から先に2つ）
+-L
+--list-files
+
+-l
+--list
+
+
+ YUMツールではネットワーク経由で最新のパッケージを取得できる。
+  パッケージの取得元(リポジトリ)を設定するファイルが格納されているディレクトリは?
+/etc/yum/sources.lst
+
+/etc/yum.repos.d/
+
+
+
+  以下の特徴を持つ領域の名前は?（アルファベットの略称で）
+  ・UEFIシステムでファームウエアが読み込まれた後、最初にアクセスされる
+  ・FATでフォーマットされる
+  ・ブートローダや起動に必要なドライバなどが置かれている
+EFI
+
+ESP
+EFIシステムパーティション
+
+
+  dpkgツールの設定ファイルは?
+/etc/dpkg.conf
+
+/etc/dpkg/dpkg.cfg
+
+
+dpkgコマンドのアクションのうち、
+  指定したファイルのインストール元のパッケージを表示するアクションは?
+  （短い方から先に2つ）
+-r
+--require
+
+-S
+--search
+
+
+  rpmコマンドの併用オプションのうち、
+  指定したファイルのインストール元のパッケージを表示するオプションは?
+  （短い方から先に2つ）
+-l
+--list
+
+-f
+--file
+
+
+rpmコマンドを使用して、インストールされている全パッケージの検査を行いたい。
+  適切なコマンドは?
+  (オプション、併用オプションの順でまとめて指定。また、それらは省略した形を使用)
+rpm -c -aV
+
+rpm -Va
+
+
+  yumコマンドを使用して、アップデート可能なパッケージを確認したい。
+  適切なコマンドは?
+check-update
+
+yum check-update
+
+
+apt-cacheコマンドを使用して、キーワード「ssh」を含む
+  パッケージを表示させたい。適切なコマンドは?
+apt-cashe serach ssh
+
+apt-cache search ssh
+
+
+
+---
+
+## メモ
+
+オプション・サブコマンド・併用オプションを全て答えよ
+
+dpkg 10個
+-E
+-G
+-R --recursive
+-i --install
+-r --remove
+-P --purge
+-l --list show installed package
+-L --listfiles show files from target package installed
+-s --status detail
+-S --search
+
+apt-get 6個
+install
+upgrade
+dist-upgrade
+remove
+update
+clean
+
+apt-cache 4個
+show
+showpkg
+depends
+search
+
+rpm インストール・アップデート・アンインストール 併用 8個
+-i --install
+-U --upgrade
+-F --freshen
+-e --erase --nodeps
+-v
+-h --hash
+--nodeps
+--test
+
+rpm 照会モード 8個
+-a --all
+-f flename ファイルを含むパッケージ名
+-p packfilename
+-c --configfiles
+-i --info 詳細情報
+-l --list パッケージに含まれるファイル
+-R --requires 依存しているファイル
+--changelog
+
+
+yum 11個
+check-update アップデート可能なパッケージを表示する
+update 指定したパッケージをアップデートする
+install 指定したパッケージをインストールする
+remove 指定したパッケージをアンインストールする
+info 指定したパッケージの詳細情報表示
+list 全パッケージ情報を一覧表示
+repolist リポジトリ一覧を表示
+search パッケージ情報をキーワードで検索
+search all パッケージ情報をキーワードで検索(説明文含む)
+grouplist パッケージグループをリスト表示する
+groupinstall 指定したグループのパッケージをインストールする
+
+
+zypper 9個
+in install
+up update
+rm remove
+lu list-updates アップデート可能なパッケージを表示
+dup dist-upgrade
+se search
+info packname
+lr repos リポジトリ一覧表示
+refresh リポジトリ更新
+
+
+
+-E
+-G
+-R --recursive
+-i --install
+-r --remove
+-l --list
+-L --listfiles
+-s --status
+-S --serach
+dpkg-reconfigure
+/etc/dkpg/dkpg.cfg
+
+install
+remove
+upgrade
+dist-upgrade
+update
+clean
+
+/etc/apt/soueces.list
+
+show
+showpkg
+depends
+search
+
+-i --install
+-U --update
+-F --freshen
+-e --erase --nodeps
+-v
+-h --hash
+--test
+--nodeps
+
+-a --all
+-f filename
+**-p paclfilename**
+-i --info
+-l --list
+-c --configfiles
+-R --requires
+--changelog
+
+**check-update**
+install
+update
+remove
+search
+serachall
+list
+info
+repolist
+grouplist
+groupinstall
+/etc/yum.conf
+/etc/yum.repos.d
+
+in install
+up update
+rm remove
+lu list-updates
+dup dist-upgrade
+se search
+info
+**list**
+lr repos
+refresh
+
