--- a/LPIC/101/2.Linuxのインストールとパッケージ管理.md
+++ b/LPIC/101/2.Linuxのインストールとパッケージ管理.md
@@ -817,54 +817,65 @@ apt-cache search ssh
 
 オプション・サブコマンド・併用オプションを全て答えよ
 
-dpkg 10個
+●dpkg 10個
 -E
 -G
 -R --recursive
 -i --install
 -r --remove
 -P --purge
--l --list show installed package
--L --listfiles show files from target package installed
--s --status detail
--S --search
+-l --list インストール済みのパッケージを表示
+-L --listfiles 指定したパッケージからインストールされたファイルを一覧表示する
+-s --status 詳細情報
+-S --search 指定したファイルのインストール元のパッケージを表示する
+-C --audit インストールが完了していない不完全なパッケージを表示する
+/etc/dkpg/dkpg.cfg
+dkpg-reconfigure
 
-apt-get 6個
-install
+
+●apt-get 6個
+install パッケージをインストールまたはアップグレードする
 upgrade
 dist-upgrade
 remove
 update
 clean
+/etc/apt/sources.list
 
-apt-cache 4個
+
+●apt-cache 4個
 show
-showpkg
+showpkg 指定したパッケージへ依存しているパッケージを含めた詳細情報を表示する
 depends
 search
 
-rpm インストール・アップデート・アンインストール 併用 8個
+
+●rpm インストール・アップデート・アンインストール 併用 8個
 -i --install
 -U --upgrade
 -F --freshen
 -e --erase --nodeps
--v
--h --hash
---nodeps
---test
+-v 詳細表示
+-h --hash 経過表示
+--nodeps 依存を無視
+--test 実際には行わない
+--nomd5 MD5によるファイルの改ざんを検査しない
 
-rpm 照会モード 8個
+●rpm 照会モード 8個
+-q --query パッケージの照会を行うオプション
+-V --verify パッケージの検査を行うオプション
+
 -a --all
 -f flename ファイルを含むパッケージ名
--p packfilename
+-p --package packfilename
 -c --configfiles
 -i --info 詳細情報
--l --list パッケージに含まれるファイル
+-l --list 指定したパッケージに含まれるファイルを表示
 -R --requires 依存しているファイル
 --changelog
 
 
-yum 11個
+●yum 11個
 check-update アップデート可能なパッケージを表示する
 update 指定したパッケージをアップデートする
 install 指定したパッケージをインストールする
@@ -876,87 +887,26 @@ search パッケージ情報をキーワードで検索
 search all パッケージ情報をキーワードで検索(説明文含む)
 grouplist パッケージグループをリスト表示する
 groupinstall 指定したグループのパッケージをインストールする
+/etc/yum.conf
+/etc/yum.repos.d
 
 
-zypper 9個
+●zypper 9個
 in install
 up update
 rm remove
 lu list-updates アップデート可能なパッケージを表示
 dup dist-upgrade
 se search
-info packname
+info packname 詳細情報
 lr repos リポジトリ一覧表示
 refresh リポジトリ更新
 
 
+list,info,serachの順で覚える。
+→
+rpmはsearchがない。
+yumはserachallまである。
+zypperはlistがない。
 
--E
--G
--R --recursive
--i --install
--r --remove
--l --list
--L --listfiles
--s --status
--S --serach
-dpkg-reconfigure
-/etc/dkpg/dkpg.cfg
-
-install
-remove
-upgrade
-dist-upgrade
-update
-clean
-
-/etc/apt/soueces.list
-
-show
-showpkg
-depends
-search
-
--i --install
--U --update
--F --freshen
--e --erase --nodeps
--v
--h --hash
---test
---nodeps
-
--a --all
--f filename
-**-p paclfilename**
--i --info
--l --list
--c --configfiles
--R --requires
---changelog
-
-**check-update**
-install
-update
-remove
-search
-serachall
-list
-info
-repolist
-grouplist
-groupinstall
-/etc/yum.conf
-/etc/yum.repos.d
-
-in install
-up update
-rm remove
-lu list-updates
-dup dist-upgrade
-se search
-info
-**list**
-lr repos
-refresh
-
+upgradeはrpmまで
