--- a/LPIC/101/3.GNUとUnixのコマンド.md
+++ b/LPIC/101/3.GNUとUnixのコマンド.md
@@ -1131,8 +1131,11 @@ N 前を検索
 :%s/A/B/g AをBに置換する(全て)
 
 :set nu 行番号を表示
+:set number
 :set nonu 行番号を非表示
+:set nonumber
 :set ts=タブ幅 タブ幅を指定
+:set tabstop
 
 viエディタのコマンドモードにおいて、カーソルの左にバッファの内容を貼り付けるviコマンドは？
 P
@@ -1610,3 +1613,396 @@ ps afx
 !
 →
 ^
+
+---
+
+## メモ
+
+man
+-a 全てのセクションのマニュアルを表示
+-f whatis
+-k apropos
+-w マニュアルの置かれているディレクトリを表示
+
+1 ユーザーコマンド
+2 システムコール
+3 ライブラリ
+4 デバイスファイル
+5 設定ファイル
+6 ゲーム
+7 その他
+8 システム管理コマンド
+9 Linux独自のカーネル用ドキュメント
+
+
+
+lsコマンド
+-a 隠しフォルダも表示する
+-A 隠しフォルダ+「.」「..」は表示しない
+-d ディレクトリ自身の情報
+-F ファイルの種類を表示
+-i inode番号を表示
+-l 詳細情報表示→小文字のエル注意
+-t 日付順に表示
+-h 単位付きで表示
+-R サブディレクトリの内容も再帰的に表示する
+
+cpコマンド
+-f
+-i
+-p コピー元の属性を保持したままコピー
+-r,-R
+-d
+-a
+
+mvコマンド
+-f
+-i
+
+mkdirコマンド
+-m
+-p
+
+rmコマンド
+-f
+-i
+-r,-R
+
+rmdirコマンド
+-p
+
+touchコマンド
+ファイルのタイムスタンプを更新する。
+-t
+-a
+-m
+
+メタキャラクタ
+* 0文字以上
+? 任意の1文字
+[]
+｛｝
+
+
+cut
+-c 取り出す文字位置
+-d デリミタ
+-f フィールド
+
+paste
+-d デリミタ
+
+sort
+-b 先頭の空白は無視する
+-f 大文字小文字を区別しない
+-r 降順
+-n 数値として処理
+-k フィールドの指定?
+-t 区切り文字
+sort f k 3 r t , file
+sort -f -k 3 -r -t , file
+sortは全てにハイフンを付ける
+
+
+split
+split [オプション] [入力ファイル] [出力ファイル]
+-行数
+デフォルトは1000行。
+出力ファイルの末尾には「aa」「ab」「ac」と連番が振られていく。
+
+wc
+-c
+-l
+-w
+
+uniq
+-d 連続した重複業のみ(depulicate)
+-u 連続して重複していない行のみ(undepulicate)
+デフォ 重複行を1行にして表示
+
+xargs command
+
+
+
+
+cat
+-n 行番号
+-b 行番号を付け加える。ただし空白行には付けない(--number-nonblank)
+
+nl
+-b ボディー
+-h ヘッダー
+-f フッター
+a すべての行
+f 空白以外の行
+n 行番号の不可を中止
+
+head
+-n 行数
+-行数
+-c バイト数
+
+tail
+-n 行数
+-行数
+-c バイト数
+-f リアルタイム出力
+
+tr
+標準入力から読みこまれた文字列の変換や削除
+tr [オプション] [文字列1 [文字列2]]
+-d 削除
+-s 連続するパターン文字列を1文字として処理
+[:plpha:]
+[:lower:]
+[:upper:]
+[:digit:]
+[:alnum:]
+[:space:]
+
+md5sum
+sha1sum
+sha256sum
+sha512sum
+-c,--check 実際のファイルと照合
+
+
+grepコマンド
+-c パターンにマッチした行数のみ表示
+-f ファイルから読み込む
+-i 大文字と小文字を区別しない
+-n 行番号も表示
+-v マッチしない行を表示
+-E 拡張正規表現
+-F 全て文字列として処理
+
+fgrepコマンド
+efrepコマンド
+
+sedコマンド
+-f コマンドが書かれたスクリプトファイルを指定
+-i 処理した内容でファイルを上書き
+-e コマンドの指定
+d マッチした行を削除
+s 置換 g 全て
+y 変換
+正規表現記号が必要な場合はシングルコーテーションで囲う。
+単純な文字列の指定ならシングルコーテーションは必要ない。
+
+sed 1,3d
+sed /^#/d
+dは最後に付ける。
+yとsは最初に付ける
+
+
+
+gzip   bzip2   xz
+gunzip bunzip2 unxz
+zcat   bzcat   xzcat
+
+gzipコマンド
+-d decompress
+-c output
+-r recurcive
+gunzipコマンド
+zcatコマンド
+展開して標準出力
+
+bzip2コマンド
+-d decompress
+-c compress_to_output
+bunzip2コマンド
+bzcatコマンド
+展開して標準出力
+
+xzコマンド
+-d decompress
+-k keep
+-l list 一覧表示、情報確認
+unxzコマンド
+xzcatコマンド
+展開して標準出力
+
+tarコマンド
+-c アーカイブの作成
+-x アーカイブの展開
+**-t アーカイブの内容を一覧表示**
+-f ファイル名 アーカイブファイル名の指定
+-z gzipによる圧縮と展開
+-j bzip2による圧縮と展開
+-J xzによる圧縮と展開
+**-v 詳細表示**
+↓存在感がない
+-u アーカイブ内にある同名のファイルより新しいものだけを追加する(?)
+-r アーカイブにファイルを追加
+-N 指定した日付より新しいデータのみを対象にする(?)
+-M 複数デバイスへの分割を行う(?)
+--delete アーカイブからファイルを削除する
+
+cpioコマンド
+cpio フラグ [オプション]
+フラグ
+-i アーカイブを展開
+-o アーカイブを作成
+-p オプション ディレクトリ ファイルを別のディレクトリにコピーする
+
+オプション
+-A
+-d
+-r
+-t
+-v
+とりあえず、こいつはioとリダイレクトってだけで十分かな。
+
+ddコマンド
+if=
+of=
+bs=
+count=
+
+
+killコマンド
+プロセスIDを指定してシグナルを送るコマンド。
+kill -[シグナル名またはシグナルID] PID
+kill -s [シグナル名またはシグナルID] PID
+kill -SIGシグナル名 PID
+1  HUP
+2  INT  Ctrl+C
+9  KILL
+15 TERM
+18 CONT
+19 STOP
+20 TSTP Ctrl+Z
+
+killallコマンド
+プロセス名を指定してシグナルを送るコマンド。
+killall -[シグナル名またはシグナルID] プロセス名
+killall -s [シグナル名またはシグナルID] プロセス名
+killall -SIGシグナル名 プロセス名
+
+pkillコマンド
+プロセス名を指定してシグナルを送るコマンド。
+-u ユーザ名
+-g グループ名
+
+
+psコマンド
+現在実行されているプロセスを表示する。
+a 全てのユーザーのプロセス表示
+f 親子関係をツリー状に表示
+u ユーザー名も表示
+x デーモンも表示
+-e 全てのプロセスを表示
+-l 詳細情報
+-f 完全なフォーマットで表示
+-p PID 指定したpidのプロセス情報のみ表示
+-C プロセス名 指定したプロセス名のプロセスのみ表示
+-w 長い行は折り返して表示
+
+pgrep
+-u
+-g
+
+
+---
+
+## 3回目
+
+sedコマンドを使用して、「text」ファイルの1行目から3行目を削除して
+  表示したい。適切なコマンドは？
+  (省略できるオプションは省略すること)
+sed d1,3 text
+
+sed 1,3d text
+
+
+ 実行中の全てのbashプロセスのプロセスIDを表示したい。
+  実行するコマンドは？（パイプを使わず1コマンドで）
+  ps -C bash
+  pgrep bash
+
+
+ sedコマンドを使用して、「text」ファイルの行頭が「#」の行を
+  削除して表示したい。適切なコマンドは？
+  (省略できるオプションは省略すること)
+sed d/'^#'/ text
+
+sed /^#/d text
+
+
+  あるコマンドを入力すると「file」ファイルのinode番号などの詳細情報が
+  出力された。
+  空欄に入るコマンドは?
+file
+stat
+
+ 正規表現で、行末を意味する記号は？
+&
+$
+
+
+ hogeユーザが起動している全てのプロセスのnice値を10にしたい。適切なコマンドは？
+renice -u hoge 10
+
+renice 10 -u hoge
+
+
+  実行中のプロセスから、testユーザーの権限で動作しているプロセスのプロセスIDを検索したい。
+  適切なコマンドは？
+  pgrep -U test
+
+  pgrep -u test
+
+
+    「file」ファイルを行番号をつけて出力したい。適切なコマンドは?
+  なお、行番号は空行を除いた行に付けることとする。
+  (アルファベット順に2つ。省略可能なオプションは省略する)
+cat -bn
+nl
+
+cat -b file
+nl file
+
+
+ trコマンドを使用して「file」ファイル内の英小文字を英大文字に変換して表示させたい。
+  適切なコマンドは?
+  (リダイレクトを使用し、文字クラスは使用しない事)
+tr '[a-z]' '[A-Z]' < file
+
+tr a-z A-Z < file
+
+
+「file」ファイルの2番目のフィールドを基準に、数値として昇順にソートしたい。
+  区切り文字は「,」（カンマ）とする。適切なコマンドは?
+  (オプションはアルファベット順にそれぞれ指定)
+  sort f k 2 n t , file
+  sort -k 2 -n -t , file
+
+
+
+  プロセスのnice値を表示できるコマンドは？
+  (アルファベット順に2つ。オプション指定が必要な方はハイフン無しで)
+ls l
+top
+
+ps l
+
+
+viエディタで、あるファイルを編集しているが、viエディタを終了することなく
+  カレントディレクトリにあるファイルを確認したい。適切なコマンドは？
+:! ls
+
+:!ls
+
+
+  viエディタであるファイルを編集しているが、別ファイルである「text」ファイルの
+  内容をカレント行の次の行に読み込みたい。適切なviコマンドは？
+:r
+:r text
+
+
+ viエディタのコマンドモードにおいて、カーソル位置の単語を削除するviコマンドは？
+x
+
+dw
+
