とりあえずプッシュ

--- a/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
+++ b/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
@@ -482,3 +482,38 @@ type
 ---
 
 ## メモ
+
+ストレージデバイスに対してパーティションを作成。
+各パーティションにファイルシステムを作成。
+作成したパーティションをマウントする。
+
+lsblk
+blkid
+
+fdisk,gdisk,parted
+mkfs,mke2fs,Btrfs,mkswap
+
+df ディスクの空き容量
+du ディスクの専有容量
+
+fsck
+e2fsck
+tune2fs
+
+mount
+umount
+/etc/fstab
+中身の編集
+マウントオプション
+
+find
+locate
+updatedb
+/tec/updatedb.conf
+whitch
+whereis
+type
+
+
+whichは絶対パス。
+whereisはソースコードやマニュアルも表示する。
