--- a/LPIC/101/ディレクトリ・設定ファイル集.md
+++ b/LPIC/101/ディレクトリ・設定ファイル集.md
@@ -48,7 +48,7 @@ GRUB2の設定ファイルは?
 
 GRUB2の設定ファイルを編集するために設定するファイルは？
 /etc/default/grub
-
+→
 設定後を反映させるコマンドは？
 grub-mkconfig
 
@@ -93,6 +93,9 @@ modprobeの設定ファイルは次のうちどれか。
 /etc/modprobe.d/○○.conf
 →
 modprobeの設定ファイルは「/etc/modprobe.d/」ディレクトリ配下の .conf の拡張子を持つファイルです。
+
+ファイルシステムの情報
+/etc/fstab
 
 ---
 
