--- a/LPIC/101/3.GNUとUnixのコマンド.md
+++ b/LPIC/101/3.GNUとUnixのコマンド.md
@@ -1881,7 +1881,9 @@ killall -s [シグナル名またはシグナルID] プロセス名
 killall -SIGシグナル名 プロセス名
 
 pkillコマンド
+pkill [オプション] [シグナル] プロセス名
 プロセス名を指定してシグナルを送るコマンド。
+普通にシグナルを指定できるっぽい。
 -u ユーザ名
 -g グループ名
 
