--- a/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
+++ b/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
@@ -517,3 +517,31 @@ type
 
 whichは絶対パス。
 whereisはソースコードやマニュアルも表示する。
+typeはコマンドに対して使う
+
+
+find [ディレクトリ] [検索式]
+検索式 説明
+
+-name
+-atime
+-mtime
+-perm
+-size
+-type
+-user
+-print マッチしたファイルの表示(省略可能)
+-exec コマンド || \;
+-ok コマンド || \;
+
+/dataディレクトリ以下から過去1日以内に更新されたファイルを検索する
+find /data -type f -mtime -1
+
+/usr/binディレクトリ以下からSUIDが設定されたファイルを検索する
+find /usr/bin -type f -perm -u+s
+
+/tmpディレクトリ以下から所有者がstudentであるファイルやディレクトリを検索する
+find /tmp -user student
+
+カレントディレクトリ以下から30日を超える日数の間アクセスされていないファイルを検索して削除する。
+find -atime + 30 -exec rm {} \;
