--- a/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
+++ b/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
@@ -287,7 +287,9 @@ umount /dev/sdb2
  ファイルとディレクトリを新規作成した際のデフォルトのパーミッションを、
   それぞれ「600」と「700」にしたい。適切なコマンドは？
 umask 077
-
+→
+ファイルの初期値 `666`
+ディレクトリの初期値 `777`
 
   「dir」ディレクトリおよびその配下にあるファイルの所有グループを「gp」に変更したい。
   適切なコマンドは？(コマンドが長い方から先に2つ、「:」は使用しないこと)
@@ -487,39 +489,82 @@ type
 各パーティションにファイルシステムを作成。
 作成したパーティションをマウントする。
 
-lsblk
-blkid
+lsblkコマンド
+システムのブロックデバイス一覧を表示する
+ブロックデバイス→HDやSSDなど、メディア上の任意の場所にアクセスできるデバイス。
+一覧表示なのでls
 
-fdisk,gdisk,parted
-mkfs,mke2fs,Btrfs,mkswap
+blkidコマンド
+UUIDとデバイスファイルとの対応を表示する
+UU「ID」の確認なのでblk「id」
+
+パーミッション作成コマンド
+fdisk
+gdisk
+parted
+
+
+ファイルシステム作成
+mkfs
+mke2fs
+Btrfs
+mkswap
+
 
 df ディスクの空き容量
-du ディスクの専有容量
+-h 適当な単位で表示
+-H 適当な単位で表示
+-k キロバイト表示
+-i inode使用状況を表示
 
-fsck
-e2fsck
-tune2fs
+du ディスクの専有容量
+du [オプション] [ファイル名orディレクトリ名]
+-a ファイルの容量も表示
+-l リンクも含めて集計
+-c 容量の合計を表示
+-k kb単位
+-m mb単位
+-s 指定したファイルやディレクトリのみの合計を表示
+-S サブディレクトリを含めずに集計→Sは大文字の法則で大文字なら表示しないと覚える
+-h 読みやすい単位
+
+fsckコマンド
+fsch [オプション] デバイス名
+アンマウントorリードオンリーで行う
+-t ファイルシステムの種類を指定
+-a 自動的に修復する(auto)
+-r 対話的に修復する
+-A /etc/fstabに記述されている全ファイルシステムに対して実行する(All)
+-N 実際には実行せず、何するか見る。 rpm --testみたいなもの。(NoAction)
+
+e2fsckコマンド
+e2fsck [オプション] デバイス名
+ext2,3,4に対するチェック
+-p 自動的に修復
+-y 全ての問い合わせにyes
+-n 全ての問い合わせにno
+
+tune2fsコマンド
+tune2fs [オプション] デバイス名
+-c 回数 チェック無しでマウントできる最大回数(count)
+-i 時間 チェックする最大時間間隔(interbal)
+-j ext2をext3に変換
+-L ファイルシステムのボリュームラベルを設定
 
 mount
+-a 
+-t 
+-o 
+
 umount
+-a
+-t
+
 /etc/fstab
 中身の編集
 マウントオプション
 
-find
-locate
-updatedb
-/tec/updatedb.conf
-whitch
-whereis
-type
-
-
-whichは絶対パス。
-whereisはソースコードやマニュアルも表示する。
-typeはコマンドに対して使う
-
-
+findコマンド
 find [ディレクトリ] [検索式]
 検索式 説明
 
@@ -545,3 +590,19 @@ find /tmp -user student
 
 カレントディレクトリ以下から30日を超える日数の間アクセスされていないファイルを検索して削除する。
 find -atime + 30 -exec rm {} \;
+
+locateコマンド
+locateはfindより高速。
+/etc/updatedb.confファイルを参照して検索する。
+
+updatedbコマンド
+/etc/updatedb.confファイルを更新する
+
+whitchコマンド
+whichは絶対パス。
+
+whereisコマンド
+whereisはソースコードやマニュアルも表示する。
+
+typeコマンド
+typeはコマンドに対して使う
