--- a/LPIC/101/99_1回目模試.md
+++ b/LPIC/101/99_1回目模試.md
@@ -110,7 +110,7 @@ A
 **28**×
 mv -f -r /home/staff/tmp /home/staff/doc
 →
-mv -v /home/staff/tmp/* /home/staff/doc
+mv -f /home/staff/tmp/* /home/staff/doc
 →
 mvのオプションを忘れた。
 -f 強制
@@ -229,6 +229,7 @@ A,B
 →
 fsck.ext4
 fsckを実行したときに実際に呼ばれるのがこいつって話だっけか。
+そうみたい。fsckやmkfsはフロントエンドコマンド見たい。
 
 51〇
 A
@@ -244,9 +245,16 @@ chown
 
 55×
 B
+→
+B,D
+3755は2000+1000+755。
+GUIDとスティッキービットが同時に設定されている事を表すらしい。
+言われてみれば、確かにその通りだと思いました。
 
 56〇
 C
+ファイルのデフォルトは`666`
+ディレクトリは`777`
 
 57〇
 C
