--- a/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
+++ b/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
@@ -755,22 +755,88 @@ UUIDとデバイスファイルとの対応を表示する
 UU「ID」の確認なのでblk「id」
 
 パーミッション作成コマンド
-fdisk
+fdiskコマンド
+対話式パーティション作成コマンド。MBR対応
+fdisk [-l] デバイス名
+-l そのデバイスのパーティションテーブルの状態を表示する。
+サブコマンド
+l パーティションタイプ一覧表示(list)
+n 作成(new)
+d 削除(delete)
+p パーティションテーブルの表示(print)
+t タイプを変更する(type)
+a ブートフラグのオンオフ切り替え(?)
+w 変更を保存して終了(write)
+q 保存しないで終了(quite)
+m メニューの表示(nemu)
+
 gdisk
+GPT対応。内容は多分fdiskと同じ。
+
 parted
+parted デバイス名 [-s サブコマンド]
+MBR,GPT両方対応。対話、直接どちらも可能。結果は即時反映
+check 番号 ファイルシステムの簡単なチェックを行う
+mklabel [gpt|msdos] 新しいパーティションテーブルを作成
+mkpart 種類 開始 終了 指定した種類のパーティションを作成
+rm 番号 指定したパーティションを削除
+print,p パーティションテーブルの表示
+quit,q 終了する
+
+parted /dev/sdb
+mklabel gpt
+mkpart
+primary
+[ext2]
+開始 1
+終了 500M
+p
+q
+
+/dev/sdaの最初のパーティションとして1GBのパーティションを作成。
+-sオプションに続けて入力する。
+parted /dev/sdb -s mkpart primary ext4 1 1G
+parted /dev/sdb -s print
 
 
 ファイルシステム作成
-mkfs
-mke2fs
-Btrfs
-mkswap
+mkfsコマンド
+mkfs.○○系のコマンドを呼び出すためのフロントエンド。
+-t ファイルシステムタイプ 種類を指定
+-c 実行前に不良ブロックを検査
+
+mke2fsコマンド
+-t 種類を指定
+-j ext2をex3にする
+-c チェック
+
+
+Btrfsの作成
+mkfs.btrfsコマンドで作成する。
+・ストレージプール
+・マルチデバイスシステム
+・スナップショット
+・サブボリューム利用可能
+
+mkswapコマンド
+swap領域を作成する。
 
 スワップ領域を無効化するコマンド
 swapoff
 
 スワップ領域を有効化するコマンド
 swapon
+
+
+XFS系コマンド
+以下全部コマンド。mkfs.xfsは mkfs -t xfsとしたときの実際に実行されるコマンド。
+mkfs.xfs   作成
+xfs_info   情報表示
+xfs_db     デバッグ
+xfs_check  チェックする
+xfs_admin  パラメータ変更
+xfs_fsr    デフラグ
+xfs_repair 修復
 
 
 df ディスクの空き容量
@@ -824,6 +890,8 @@ mount
 umount
 -a
 -t
+全てとついた場合、aは付ける。タイプの指定だけではダメそう。
+
 
 /etc/fstab
 中身の編集
