--- a/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
+++ b/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
@@ -859,7 +859,7 @@ du [オプション] [ファイル名orディレクトリ名]
 
 
 fsckコマンド
-fsch [オプション] デバイス名
+fsck [オプション] デバイス名
 アンマウントorリードオンリーで行う
 -t ファイルシステムの種類を指定
 -a 自動的に修復する(auto)
@@ -877,7 +877,7 @@ ext2,3,4に対するチェック
 tune2fsコマンド
 tune2fs [オプション] デバイス名
 -c 回数 チェック無しでマウントできる最大回数(count)
--i 時間 チェックする最大時間間隔(interbal)
+-i 時間 チェックする最大時間間隔(interval)
 -j ext2をext3に変換
 -L ファイルシステムのボリュームラベルを設定
 
@@ -890,12 +890,13 @@ mount
 umount
 -a
 -t
-全てとついた場合、aは付ける。タイプの指定だけではダメそう。
+「全て」とついた場合、aは付ける。タイプの指定だけではダメそう。
 
 
 /etc/fstab
 中身の編集
-マウントオプション
+マウントしたいデバイス名 マウント先 ファイルシステム マウントオプション ダンプするかフラグ ファイルチェックの優先順位
+
 
 findコマンド
 find [ディレクトリ] [検索式]
@@ -944,3 +945,122 @@ typeコマンド
 typeはコマンドに対して使う
 
 ルートユーザー用に予約される領域→全体の5%
+
+
+---
+
+
+ inodeの使用状況を確認することが出来るコマンドは？
+
+
+
+findコマンドの検索式で、
+シンボリックリンクを検索するものは？
+
+
+MBR形式のハードディスクにおけるパーティションタイプで、Linux swapを表す数字は?
+
+
+「/etc/fstab」ファイルを編集して、ext3ファイルシステムの「/dev/sda1」を
+システム起動時から「/boot」に自動マウントするよう設定したい。
+適切な記述は？(マウントオプションのアルファベット順に2つ)
+なお、「/dev/sda1」をdumpコマンドの対象とし、fsckは優先度を2とすること。
+
+ 以下のような内容を出力するコマンドは？
+-rw-r--r-- 1 test staff 24 Jul 21 13:38 index.html
+
+
+ XFSファイルシステムのデフラグを行うコマンドは？
+
+
+
+XFSファイルシステムの検査・修復を行うコマンドは？
+
+
+fdiskコマンドのサブコマンドで、パーティションタイプ（システムID）を変更するものは?
+
+
+ カレントディレクトリとそのサブディレクトリが占めている容量を
+メガバイト単位で表示したい。適切なコマンドは？
+
+
+
+ tune2fsコマンドのオプションのうち、ファイルシステムのチェックを行うまでの
+最大時間間隔を指定するオプションは？
+
+
+「dir」ディレクトリの合計容量のみを分かりやすい単位を付加して表示したい。
+適切なコマンドは？(オプションはアルファベット順に、まとめて指定すること)
+
+
+「dir」ディレクトリおよびその配下にあるファイルの所有グループを「gp」に変更したい。
+適切なコマンドは？(コマンドが長い方から先に2つ、「:」は使用しないこと)
+
+
+
+「file」の所有ユーザをtestからstaffに、所有グループをtestからgpに変更したい。
+適切なコマンドは？(「:」を使用するほうから先に2つ)
+
+
+
+ duコマンドのオプションのうち、指定したファイルやディレクトリの
+  合計容量のみを表示するオプションは？
+
+
+
+fdiskコマンドのサブコマンドで、パーティションタイプの一覧を表示するものは?
+
+
+
+1番目のSCSIハードディスクの、最初の論理パーティションを表すデバイスファイルは？
+
+
+
+  3番目のSCSIハードディスクの2番目のパーティションを表すデバイスファイルは？
+
+
+
+ 2番目のIDEハードディスクの2番目のパーティションを表すデバイスファイルは？
+  （カーネル2.6.18より前の表記とする）
+
+
+
+  e2fsckコマンドで「/dev/sda4」をチェックする際、全ての問題を
+  自動的に修復したい。適切なコマンドは？
+
+
+
+  以下の「dir」ディレクトリ配下に新規に作成するファイルやディレクトリの
+  所有グループがstaffになるようにしたい。適切なコマンドは？
+  (パーミッションの指定には、1つ目は数値、2つ目は記号3文字を使用すること)
+
+
+
+  findコマンドでカレントディレクトリ以下から、アクセス権が775のディレクトリを検索したい。
+  適切なコマンドは？
+  (検索式はファイルの種類から先に指定する事。アクションは省略)
+
+
+
+  現在マウントされているxfs形式のファイルシステムを全てアンマウントしたい。
+  適切なコマンドは？(オプションはアルファベット順にまとめて指定）
+
+
+ 「dir」ディレクトリと、その配下にあるディレクトリおよびファイルが占めている容量を、
+  分かりやすい単位を付加して表示したい。適切なコマンドは？
+  (オプションはアルファベット順に、まとめて指定すること)
+
+
+
+ 「dir」ディレクトリおよびその配下にあるファイルのパーミッションを755に設定したい。
+  適切なコマンドは？(パーミッションの指定には数値を使用すること)
+
+
+
+ 「/etc/fstab」ファイルに記述するマウントオプションで、
+  一般ユーザでマウントを可能にし、本人のみアンマウント出来るようにするものは？
+
+
+  「dir」ディレクトリ内において、自分以外のユーザが所有するファイルを削除できないようにしたい。
+  なお、「dir」ディレクトリのパーミッションは755である。適切なコマンドは？
+  (パーミッションの指定には、1つ目は数値、2つ目は記号3文字を使用すること)
