101試験直前メモ

--- a/LPIC/101/2.Linuxのインストールとパッケージ管理.md
+++ b/LPIC/101/2.Linuxのインストールとパッケージ管理.md
@@ -838,7 +838,7 @@ install パッケージをインストールまたはアップグレードする
 upgrade
 dist-upgrade
 remove
-update
+update パッケージのデータベースを最新に更新する
 clean
 /etc/apt/sources.list
 
@@ -866,10 +866,10 @@ search
 -V --verify パッケージの検査を行うオプション
 
 -a --all
--f flename ファイルを含むパッケージ名
 -p --package packfilename
 -c --configfiles
 -i --info 詳細情報
+-f --file flename 指定したファイルのインストール元のパッケージを表示
 -l --list 指定したパッケージに含まれるファイルを表示
 -R --requires 依存しているファイル
 --changelog
@@ -910,3 +910,45 @@ yumはserachallまである。
 zypperはlistがない。
 
 upgradeはrpmまで
+
+
+
+ 「/sbin/init」の代わりに「/bin/bash」を起動したい。起動プロンプトにおいて下線部に当てはまる記述は?
+  grub> kernel /boot/vmlinuz-2.6.35 _____________
+init=/sbin/bash
+
+  ルートパーティションを「/dev/sda2」に指定して起動させたい。起動プロンプトにおいて下線部に当てはまる記述は?
+  grub> linux /boot/vmlinuz-2.6.35 _____________
+root=/dev/sda2
+
+ systemdの動作するシステムで、実験的にグラフィカルログインモードで起動したい。
+  起動プロンプトで指定すべきカーネルパラメータを答えよ（省略不可）
+  init=graphical.target
+
+  systemd.unit=graphical.target
+
+メンテナンス
+メンテナンス用にシングルユーザモードで起動したい。起動プロンプトにおいて下線部に当てはまる記述は?
+  grub> kernel /boot/vmlinuz-2.6.35 _____________
+  (数字を使用するものを先に、その後アルファベット順で)
+1
+s
+single
+
+dpkg
+/etc/dpkg/dpkg.cfg
+
+yum
+/etc/yum.conf
+/etc/yum.repos.d/
+
+apt
+/etc/apt/sources.list
+
+
+grub2
+/boot/grub/grub.cfg
+
+grub
+/boot/grub/grub.conf
+/boot/grub/menu.lst
