--- a/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
+++ b/LPIC/101/4.デバイス,Linuxファイルシステム,FHS.md
@@ -490,7 +490,7 @@ findコマンドの検索式で、
 シンボリックリンクを検索するものは？
 -type
 →
--type -l
+-type l
 
 
 MBR形式のハードディスクにおけるパーティションタイプで、Linux swapを表す数字は?
@@ -812,11 +812,11 @@ mke2fsコマンド
 
 
 Btrfsの作成
-mkfs.btrfsコマンドで作成する。
-・ストレージプール
-・マルチデバイスシステム
+`mkfs.btrfsコマンド`で作成する。
+・複数の物理ボリュームをまとめて1つの仮想的なボリュームを作成できる(ストレージプール)
+・複数の物理ボリュームにまたがってファイルシステムを作成できる(マルチデバイスシステム)
 ・スナップショット
-・サブボリューム利用可能
+・ファイルシステムを分割したサブボリューム利用可能
 
 mkswapコマンド
 swap領域を作成する。
@@ -886,6 +886,13 @@ mount
 -t 
 -o 
 マウントはタイプを指定しない場合、自動で推測してくれる。
+
+現在マウントされているファイルシステムを確認するコマンドを全て選べ。
+cat /etc/mtab
+mount
+cat /proc/mounts
+cat /proc/self/mounts
+多分出ないとは思うけど、proc系ありなのかってことで。
 
 umount
 -a
