--- a/LPIC/101/1.システムアーキテクチャ.md
+++ b/LPIC/101/1.システムアーキテクチャ.md
@@ -363,64 +363,78 @@ blacklist: ロードしたくないカーネルモジュールを指定する
 /etc/systemd/system/ディレクトリ以下に存在するターゲット
 runlevel0.target~runlevel6.target
 
+---
+
+## 書いたら消す問題
 
 udevがデバイスファイル作成時に使用する設定ファイルが配置されるディレクトリ
-
+/etc/udev/rules.d
 
 modprobeの設定ファイルが保存されるディレクトリは?
-
+/etc/modprobe.d
 
 pciデバイスの格納ファイル
-
+/proc/bus/pci/devices
 
 usbデバイスの格納ファイル
-
+/proc/bus/pci/devices
 
 IRQに関する情報が格納されているファイルは?
-
+/etc/interrupts
 
 システム起動時にブートローダからカーネルに渡されたパラメータが格納されたファイルは?
-
+/proc/cmdline
 
 systemdの動作するシステムで、システム起動時に最初に実行されるUnitファイルは？
-
+/etc/systemd/system/default.target
 
 「ctrl+alt+del」キーを押下した際のシステムの動作を設定できるファイルは?
-
+/etc/inittab
 
 systemdのデフォルトのターゲットが格納されているディレクトリは？
-
+/etc/systemd/system
 
 デフォルトのランレベルを設定できるファイルは?
 (SysVinit採用システムの場合)
-
+/etc/inittab
 
 SysVinit採用システムで、ランレベル3で実行されるスクリプトが入っているディレクトリは?
-
+/etc/rc3.d
 
 GRUB2の設定ファイルは?
-
+/boot/grub/grub.cfg
 
 GRUBLegacyの設定ファイルは?
-
+/boot/grub/grub.conf
+/boot/grub/menu.lst
 
 
 GRUB2の設定を直接編集できるファイルは?
 （フルパスでファイル名、ディレクトリ名の順に2つ）
-
+/etc/default/grub
+/etc/grub.d/
 
 
 updatedbコマンドの設定ファイルは？
-
+/etc/updatedb.conf
 
 プログラムの実行時に、共有ライブラリの場所を検索するために使用されるファイルは?
-
+/etc/ld.so.cache
 
 共有ライブラリを格納するためのディレクトリを新たに作成した。
 ldconfigコマンドを使用して共有ライブラリのキャッシュファイルを更新するためには、
 どのファイルに新しいディレクトリのパスを記述する必要があるか?
 また、その作成コマンドは？
-
+/etc/ld.so.conf
+lfconfig
 
 マニュアルページが格納されているディレクトリは？
+/usr/share/man
 
+
+/etc/dpkg/dpkg.cfg
+
+/etc/apt/sources.list
+
+/etc/yum.repos.d
+/etc/yum.conf
